helm-chart-sources/php-k8s-performance/manifest.yaml
---
# Source: php-k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-active 
  labels:
    chart: "php-k8s-3.0.0"
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: php-fpm
  selector:
    name: app
    release: php-app
---
# Source: php-k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-preview
  labels:
    chart: "php-k8s-3.0.0"
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: php-fpm
  selector:
    name: app
    release: php-app
---
# Source: php-k8s/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: app
  name: app
  namespace: development-cdn
spec:
  tls:
    - hosts:
       - example.com
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 9000
---
# Source: php-k8s/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app
  labels:
    chart: "php-k8s-3.0.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        environment: development
        name: app
    spec:
      containers:
        - name: app
          image: ':0.1.0'
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 10
          volumeMounts:
      volumes:
  strategy:
    blueGreen: 
      activeService: app-active
      previewService: app-preview
      autoPromotionEnabled: true
      prePromotionAnalysis:
        templates:
        - templateName: app-performanceTest
        args:
        - name: configmap-name
          value: app-performanceTest
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
